Content/home.css
body{
	/*padding:0;*/
    margin:0;
    font-family: 'FontAwesome' !important;
}

@media screen and (max-width: 640px){
    #hamburger-collapse{
        display:none;
    }

    body{
        font-size:18pt;
    }
    .resume-click{
        color:#18c4ec;
    }
}

@media screen and (min-width: 640px){
    #hamburger-collapse{
        display:inline-block;
    }
}

.ben-photo{

    background-image:url(https://MGNCapstone.github.io/Images/SwingingBridgePhoto.jpg);
    background-repeat:no-repeat;
    background-size:cover;
    opacity:1.0;
    position:fixed;
}

.phased-photo{
    background-image:url(https://MGNCapstone.github.io/Images/NighttimeFerryBoatPic.jpg);
    background-repeat:no-repeat;
    background-size:cover;
    opacity:1.0;
    position:fixed;

    width:100%;
    height:100%;
    border: 1px solid black;
    top:50px;
    left:0px;
    overflow:auto;
    overflow-y:scroll;
    overflow-x:scroll;
}

.background-braille{
    background-image:url(https://MGNCapstone.github.io/Images/braille-1.jpg);
    background-repeat:no-repeat;
    background-size:cover;
    opacity:1.0;
    position:fixed;

    width:100%;
    height:100%;
}

.blaine-photo{

    background-image:url(https://MGNCapstone.github.io/Images/BlainePhoto.jpg);
    background-repeat:no-repeat;
    background-size:cover;
    opacity:1.0;
    position:fixed;    
}

.home-background{
	background-color:slategrey;
}

.photo-space{
	height:50%;
    border: 3px solid silver;
    top:0px;
    left:0px;
	margin-bottom:15px;
}

.personal-image-set{
	width:100%;
	height:inherit;
	border:5px solid silver;
}

.full-width{
	width:95%;
}

.top-nav{
	border-bottom:2px solid gray;
	background-color:#000000;
	padding:15px 0px 25px 0px;
    width:90%;
    text-align:center;
}

.Home-Title{
	padding-top:25px;
	font:bold 24px Arial;
}

.Home-SubTitle{
	padding-top:15px;
	font:bold 18pt Arial;
}

.Home-Manifesto{
	font:16pt Arial;
}

.subtitle{
	display:block;
}

.font-18{
    font-size:12pt;
}

.text-white{
	color:#ffffff;
    font-weight:700;
}

.text-light-blue{
    color:firebrick;
}

.fa {
    font-family: 'FontAwesome' !important;
}

.fa-var-home{
    font-family: 'FontAwesome' !important;
}

.top-nav-link:hover {
    color:white;
    text-decoration:none;
}

.top-nav-link:checked {
    color:white;
    text-decoration:none;
}

.resume-click {
    font-style:italic;
    color:#18c4ec;
    text-decoration:underline;
}

.resume-click:link{
  color:#18c4ec;
}
/*.resume-click:visited{
  color:#000000;
}*/
.resume-click:hover{
  color:#ffffff;
}

.resume-click:focus{
  color:white;
}
.resume-click:active{
  color:white;
}

/*#resume-blaine{
    color:#18c4ec;
}

#resume-blaine:link{
  color:#18c4ec;
}*/
.resume-blaine:visited{
  color:white;
}
.resume-blaine:hover{
  color:white;
}

/*#resume-blaine-download{
    color:#18c4ec;
}

#resume-blaine-download:link{
  color:#18c4ec;
}*/
.resume-blaine-download:visited{
  color:white;
}
.resume-blaine-download:hover{
  color:white;
}

.top-nav-link:link{
  color:white;
  text-decoration:none;
}
.top-nav-link:visited{
  color:white;
  text-decoration:none;
}
.top-nav-link:hover{
  color:white;
  text-decoration:none;
}
.top-nav-link:focus{
  color:white;
  text-decoration:none;
}
.top-nav-link:active{
  color:white;
  text-decoration:none;
}

.hide-horizontal-scroll {
    overflow-x:hidden !important;
}

.text-bold{
    font-weight:700;
}

.allow-scroll-x{
    overflow-x:scroll !important;
}

.expando{
    border:1px solid white;
    font-size:11px !important;
    padding:5px;
    color:white;
}
.expando:hover{
    color:white;
    text-decoration:none;
}
.expando:link{
    color:white;
    text-decoration:none;
}
.expando:visited{
    color:white;
    text-decoration:none;
}
.expando:focus{
    color:white;
    text-decoration:none;
}
.expando:active{
    color:white;
    text-decoration:none;
}

.all-in-line{
    white-space:nowrap;
}

.plain-page-link:hover{
    color:white;
    text-decoration:underline;
}
.plain-page-link:link{
    color:white;
    text-decoration:underline;
}
.plain-page-link:visited{
    color:white;
    text-decoration:underline;
}
.plain-page-link:focus{
    color:white;
    text-decoration:underline;
}
.plain-page-link:active{
    color:white;
    text-decoration:underline;
}

.bold-arial-18{
    font:bold 18px arial;
    color:#ffffff;
}

.custom-faux-table-head{
    border:2px solid #ffffff;
    background-color:#858585;
}
.custom-matching-act-tbl-hd{
    border:2px solid #ffffff;
}

.footer-background{
    background-color:#000000;
}

.fieldset-styling{

     border:.5px solid orange;  /*#D75C1A*/
     opacity:.8;
     padding-bottom:10px;
}

.mgn-tbl-stripe tr:nth-child(even){
  background-color: #ABA8A6;
}
.mgn-tbl-stripe tr:nth-child(odd){
  background-color: #858585;
}
.div-tbl-head{
  background-color: #858585;
}


.mgn-nav{
    min-width:150px !important;
}

.width-100pct{
    width:100% !important;
}

ul{
    list-style-type:none;
}

